fixed footer spacing

--- a/src/assets/styles/navigation.scss
+++ b/src/assets/styles/navigation.scss
@@ -94,5 +94,5 @@
   @apply mt-2 flex flex-row gap-5 sm:mt-0 sm:flex-row sm:items-center sm:ps-5;
 }
 .buymecoffee {
-  @apply ml-0 mt-8 flex flex-nowrap text-sm shrink-0 items-center justify-center hover:underline md:ml-6 md:mt-0;
+  @apply ml-0 flex text-nowrap text-sm shrink-0 items-center justify-center hover:underline md:ml-6 md:mt-0;
 }
